--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,11 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 project.image=images/
+
+#spring Security
+
+logging.level.org.springframework.security=DEBUG
+
+spring.security.user.name=Malli
+spring.security.user.password=Malli
+spring.security.user.roles=ADMIN
